<resources>
    <string name="app_name">MyTask</string>
    <string name="title_of_task">Title of Task</string>
    <string name="date_of_task">Deadline of Task</string>
    <string name="set_task_status">Done</string>
    <string name="name_of_each_task">Task</string>
    <string name="date_of_your_task">Deadline</string>
    <string name="details_of_your_task">Task Details</string>
    <string name="save_task">Save</string>
    <string name="add_a_task">Add a Task</string>
    <string name="task_hint">Type the name or title of your task here</string>
    <string name="detail_hint">Type the detail of your task here</string>
    <string name="important">Is this task important?</string>
    <string name="important_yes">Yes</string>
    <string name="important_no">No</string>
    <string name="important_undecided">I don\'t Know</string>
    <string name="date_hint">Type your date of your task here</string>
    <string name="task">Task will appear here</string>
</resources>
